# VCCTL

./: .gitignore  .gitmodules  AGGREGATE_FIX_COMPLETE.md  ALKALI_DATA_FILES_INTEGRATION_COMPLETE.md  AUTHORS.md  CEMENT_PERSISTENCE_FIXES.md  CHANGES.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE_backup_session11.md  CMakeLists.txt  DISCLAIMER.md  GRADING_SYSTEM_TODO.md  HYDRATION_INTEGRATION_STATUS.md  HelpMigrateAndPythonEnvironment.md  HydrationSim_E2ETest_20250812_165252_extended_parameters.csv  ICON_INTEGRATION_SUMMARY.md  INSTALL.md  LICENSE.md  LINUX-BUILD-GUIDE-WSL.md  MACUIAUTO.md  MCP_INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  Makefile  OPERATIONS_PANEL_STATUS_SUMMARY.md  OPERATIONS_PROGRESS_TRACKING_FIX.md  PSD_IMPORT_STATUS.md  PSD_UPDATE_COMPLETE.md  PYVISTA_DATA_ORDERING_FIX.md  README.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025_09_20.md  SESSION_SUMMARY_PHASE3_COMPLETE.md  SESSION_SUMMARY_PHASE3_FIXES_COMPLETE.md  TGA_CaCO3.ipynb  UI_POLISH_FIXES_COMPLETE.md  UNIFIED_PSD_IMPLEMENTATION_SUMMARY.md  UNIFIED_PSD_INTEGRATION_COMPLETE.md  VCCTL_FINALIZATION_STRATEGY.md  VERIFICATION_REQUIRED.md  (+230 more)
backend/: CMakeLists.txt  Makefile  Makefile.win  aggvrml.c  apstats.c  burn3d.c  chlorattack3d.c  cmake.out  disrealnew.c  disrealnew.h  distfapart.c  distfarand.c  dryout.c  elastic.c  genaggpack.c  genmic-2024.c  genmic.c  hydmovie.c  hydrealnew.c  image100.c  leach3d.c  measagg.c  oneimage.c  onepimage.c  packvrml.c  perc3d-leach.c  perc3d.c  phaseids.tex  poredist3d-Hg.c  poredist3d.c  properties.c  rand3d.c  stat3d.c  sulfattack3d.c  test_simple  thames2vcctl.c  thames2vcctlcorr.c  totsurf.c  transport.c
backend/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
backend/build-mingw/src/vcctllib/: Makefile  cmake_install.cmake
backend/build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VCCTL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aggvrml.vcxproj  aggvrml.vcxproj.filters  apstats.vcxproj  apstats.vcxproj.filters  chlorattack3d.vcxproj  chlorattack3d.vcxproj.filters  cmake_install.cmake  disrealnew.vcxproj  disrealnew.vcxproj.filters  distfapart.vcxproj  distfapart.vcxproj.filters  distfarand.vcxproj  distfarand.vcxproj.filters  dryout.vcxproj  dryout.vcxproj.filters  elastic.vcxproj  elastic.vcxproj.filters  genaggpack.vcxproj  genaggpack.vcxproj.filters  genmic.vcxproj  genmic.vcxproj.filters  hydmovie.vcxproj  hydmovie.vcxproj.filters  image100.vcxproj  image100.vcxproj.filters  leach3d.vcxproj  leach3d.vcxproj.filters  measagg.vcxproj  measagg.vcxproj.filters  oneimage.vcxproj  oneimage.vcxproj.filters  onepimage.vcxproj  (+21 more)
backend/build-windows/aggvrml.dir/Release/: aggvrml.exe.recipe
backend/build-windows/apstats.dir/Release/: apstats.exe.recipe
backend/build-windows/chlorattack3d.dir/Release/: chlorattack3d.exe.recipe
backend/build-windows/disrealnew.dir/Release/: disrealnew.exe.recipe
backend/build-windows/distfapart.dir/Release/: distfapart.exe.recipe
backend/build-windows/distfarand.dir/Release/: distfarand.exe.recipe
backend/build-windows/dryout.dir/Release/: dryout.exe.recipe
backend/build-windows/elastic.dir/Release/: elastic.exe.recipe
backend/build-windows/genaggpack.dir/Release/: genaggpack.exe.recipe
backend/build-windows/genmic.dir/Release/: genmic.exe.recipe
backend/build-windows/hydmovie.dir/Release/: hydmovie.exe.recipe
backend/build-windows/image100.dir/Release/: image100.exe.recipe
backend/build-windows/leach3d.dir/Release/: leach3d.exe.recipe
backend/build-windows/measagg.dir/Release/: measagg.exe.recipe
backend/build-windows/oneimage.dir/Release/: oneimage.exe.recipe
backend/build-windows/onepimage.dir/Release/: onepimage.exe.recipe
backend/build-windows/perc3d-leach.dir/Release/: perc3d-leach.exe.recipe
backend/build-windows/perc3d.dir/Release/: perc3d.exe.recipe
backend/build-windows/poredist3d.dir/Release/: poredist3d.exe.recipe
backend/build-windows/rand3d.dir/Release/: rand3d.exe.recipe
backend/build-windows/src/vcctllib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  VcctlLibrary_project.sln  cmake_install.cmake  vcctl.vcxproj  vcctl.vcxproj.filters
backend/build-windows/stat3d.dir/Release/: stat3d.exe.recipe
backend/build-windows/sulfattack3d.dir/Release/: sulfattack3d.exe.recipe
backend/build-windows/thames2vcctl.dir/Release/: thames2vcctl.exe.recipe
backend/build-windows/thames2vcctlcorr.dir/Release/: thames2vcctlcorr.exe.recipe
backend/build-windows/totsurf.dir/Release/: totsurf.exe.recipe
backend/build-windows/transport.dir/Release/: transport.exe.recipe
backend/include/: burn3d.h  burnset.h  hydrealnew.h  parthyd.h  properties.h  vcctl.h  vcctlcomplex.h  vcctlfuncs.h
backend/src/: disrealnew.c  disrealnew.c.backup  disrealnew.c.diff  disrealnew.h  disrealnew.h.diff  distfapart.c  elastic.c  genaggpack.c  genmic-2025.c  genmic-CVEN-R194RFQMKC.c  genmic.c  hydmovie.c  image100.c  measagg.c  oneimage.c  packvrml.c  perc3d.c  stat3d.c  transport.c
backend/src/include/: burn3d.h  burnset.h  hydrealnew.h  pHpred.h  parthyd.h  vcctl.h  win32_compat.h
backend/src/include/libpng16/: pnglibconf.h
backend/src/vcctllib/: CMakeLists.txt  convert_id.c  imageutil.c  mediansize.c  memutil.c  messages.c  probe_imgheader.c  ran1.c  write_imgheader.c
backend/src/zlib/: apstats.c  dryout.c
backend/vcctllib/: CMakeLists.txt  Makefile  Makefile.win  breakflocs.c  calcporedist3d.c  checkbc.c  complex.c  diam2vol.c  filehandler.c  fread_string.c  gtime.c  id2phasename.c  imageutil.c  mediansize.c  memutil.c  messages.c  probe_imgheader.c  ran1.c  read_imgheader.c  read_string.c  skip_imgheader.c  vcctl.h  write_imgheader.c
backend/vcctlprogs/: .gdb_history  Makefile  Makefile.win  burnset.c  disrealnew.c  disrealnew.h  distfapart.c  dryout.c  elastic.c  genaggpack.c  genmic-2024.c  genmic.c  hydmovie.c  image100.c  leach3d.c  main.c  measagg.c  onepimage.c  packvrml.c  phaseids.aux  poredist3d.c  stat3d.c  thames2vcctl.c  thames2vcctlcorr.c  totsurf.c  transport.c.orig
(+3347 files in other folders)
